# Barstool-Sports-Data-Pipeline

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yaml
dbt/: .user.yml  dbt_project.yml  profiles.yml
dbt/models/marts/: marts.yml  user_engagement_summary.sql
dbt/models/staging/: sources.yml  staging.yml  stg_brands_talent.sql  stg_prod_content.sql  stg_sample_data.sql
prefect/: flow.py
src/: __init__.py  gcs_file_reader.py  s3_file_reader.py  upload_data_to_bigquery.py
src/utils/: __init__.py  html_reader.py  jsonl_reader.py  table_to_parquet_buffer.py
streamlit/: app.py
tests/: __init__.py  test_pipeline.py
