[tool.poetry]
name = "barstool-sports-data-pipeline"
version = "0.1.0"
description = "Barstool Sports data exercise."
authors = ["Kim, Andrew <andrewkimka@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
prefect = "^3.4.3"
prefect-dbt = "^0.6.7"
pyarrow = "^20.0.0"
google-cloud-bigquery = "^3.33.0"
google-cloud-storage = "<3.0.0"
dbt-core = "^1.9.4"
dbt-bigquery = "^1.9.2"
python-dotenv = "^1.1.0"
boto3 = "^1.38.23"
lxml = "^5.4.0"
streamlit = "^1.45.1"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.1.3"
pytest-cov = ">=4.0.0"
pytest-mock = ">=3.9.0"
flake8 = ">=5.0.4"
black = ">=22.8.0"
coverage = {version = ">=6.5.0", extras = ["toml"]}
flake8-black = ">=0.3.3"
flake8-isort = ">=4.2.0"
flake8-bugbear = ">=22.9.23"
flake8-simplify = ">=0.19.3"
flake8-docstrings = ">=1.6.0"
mypy = ">=0.981"

[tool.coverage.run]
branch = true
source = ["barstool-sports-data-pipeline"]

[tool.coverage.report]
show_missing = true
fail_under = 50

[tool.pytest.ini_options]
testpaths=["tests"]

[tool.pyright]
include = ["barstool-sports-data-pipeline"]

[tool.mypy]
files = ["barstool-sports-data-pipeline", "tests"]
cache_dir = "${HOME}/.mypy_cache"
ignore_errors = false
disallow_untyped_defs = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
